# copigit

./: README.md  copier.yaml  pyproject.toml
template/: README.md.jinja
